Fixed overflow behaviour

--- a/PortfolioSite/src/index.css
+++ b/PortfolioSite/src/index.css
@@ -31,10 +31,10 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  display: flow-root;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
